load("@bazel_skylib//rules:native_binary.bzl", "native_binary")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "macos_aarch64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)

config_setting(
    name = "windows_aarch64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:windows",
    ],
)

native_binary(
    name = "bsdtar",
    src = select({
        ":macos_aarch64": "@tar-darwin-arm64//file",
        ":linux_x86_64": "@tar-linux-amd64-musl//file",
        ":linux_aarch64": "@tar-linux-arm64-musl//file",
        ":windows_aarch64": "@tar-windows-arm64-gnu//file",
        ":windows_x86_64": "@tar-windows-amd64-gnu//file",
    }),
)

exports_files([
    "repack-llvm.sh",
    "create-release.sh",
    "latest-llvm-version.sh",
])
